# cifra-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test_and_deploy.yml
ci_scripts/: get_version.py  md2man.sh
migrations/2020-03-01-012743_languages/: up.sql
migrations/2020-03-01-012827_words/: up.sql
resources/: english_book_c1.txt  french_book.txt  german_book.txt  german_book_c1.txt  spanish_book.txt  spanish_book_c1.txt
src/: lib.rs  schema.rs
src/attack/: affine.rs  caesar.rs  database.rs  dictionaries.rs  frequency.rs  mod.rs  simple_attacks.rs  substitution.rs  transposition.rs  vigenere.rs
src/cipher/: affine.rs  caesar.rs  common.rs  cryptomath.rs  mod.rs  substitution.rs  transposition.rs  vigenere.rs
src/encoding/: reverse.rs
