[package]
name = "cifra-rust"
version = "0.1.0"
authors = ["dante-signal31 <dante.signal31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.2"
diesel = {version = "1.4.3", features = ["sqlite"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
linked-hash-map = "0.5.3"
rand = "0.7.3"
rayon = "1.3.0"
regex = "1.3.5"


[dev-dependencies]
test_common = "1.3.0"
rstest = "0.6.4"