[package]
name = "cifra"
version = "0.9.0"
authors = ["dante-signal31 <dante.signal31@gmail.com>"]
edition = "2018"
description = "Console command to crypt and decrypt texts using classic methods. It also performs crypto attacks against those methods."
homepage = "https://github.com/dante-signal31/cifra"
license = "BSD-3-Clause"
keywords = ["cipher", "caesar", "crypto"]
categories = ["command-line-utilities", "cryptography"]

[lib]
name="cifra"
path="src/lib.rs"

[[bin]]
name="cifra"
path="src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.2"
diesel = {version = "1.4.3", features = ["sqlite"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
linked-hash-map = "0.5.3"
rand = "0.7.3"
rayon = "1.3.0"
regex = "1.3.5"
clap = "3.0.0-beta.4"
strum = "0.21.0"
strum_macros = "0.21.1"

[dev-dependencies]
test_common = "1.4.0"
rstest = "0.6.4"
float-cmp = "0.8.0"

[package.metadata.deb]
conflicts = "cifra"
section = "utils"
priority = "optional"
assets = [
    ["target/release/cifra", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cifra/", "644"],
    ["man/cifra.1.gz", "usr/share/man/man1/", "644"],]
